2011-11-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook/, gphotoframe.ui: Started implementation for
	  Facebook album selection (issue #98).

2011-11-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* frame.py: Added new gconf key 'gravity' for a workaround for
	  a Xfwm bug (issue #97).  Xfwm does not support GDK_GRAVITY
	  correctly.  The frame window gravity needs be set to
	  GDK_GRAVITY_NORTH_WEST forcelly.
	
2011-09-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/gtkimage.py: Improved loading speed for large image files
	  which has geometry info.  (Added support for
	  gtk.gdk.pixbuf_new_from_file_at_size.)

2011-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/__init__.py: Added support for a direct link to Flickr.

2011-07-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4 release.

2011-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base/ui.py, flickr/authdialog.py: Fixed a bug.

2011-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/EXIF.py (olympus_special_mode): Fixed an Olympus maker
	  note error.

2011-06-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4-rc1 release.
	* it.po: Updated Italian translation.  Thanks Cristian Marchi!

2011-06-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, history.py: Fixed url escaping in SQL (issue #94).
	* utils/sqldb.py: Added debug messages for SQL.
	* help/C/gphotoframe.xml: Updated a help documentation.  
	  Thanks Cristian Marchi!

2011-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/: Updated help images.  Thanks Cristian Marchi!

2011-06-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py (RecentQueue.clear_cache): Improved obsolete cache
	  files removing.

2011-06-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/EXIF.py (EXIF_header.decode_maker_note): Fixed a Canon
	  maker note error.

2011-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Improved obsolete cache thumbnails removing.
